--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project Site</title>
-    <style>
-        body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #f4f4f4; }
-        header { background-color: #333; color: white; padding: 1rem 0; text-align: center; }
-        nav { background-color: #444; padding: 0.5rem; text-align: center; }
-        nav a { color: white; margin: 0 15px; text-decoration: none; }
-        main { padding: 20px; background: white; max-width: 800px; margin: 20px auto; box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); }
-        footer { background-color: #333; color: white; text-align: center; padding: 1rem 0; position: fixed; width: 100%; bottom: 0; }
-    </style>
+    <link rel="stylesheet" href="styles.css"> <!-- Linking the external CSS -->
 </head>
 <body>
     <header>
@@ -24,7 +17,23 @@
         <a href="#contact">Contact</a>
     </nav>
 
-    <main>
+    <div class="sidenav">
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#clients">Clients</a>
+        <a href="#contact">Contact</a>
+        <button class="dropdown-btn">Dropdown
+            <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-container">
+            <a href="#">Link 1</a>
+            <a href="#">Link 2</a>
+            <a href="#">Link 3</a>
+        </div>
+        <a href="#contact">Search</a>
+    </div>
+
+    <main class="main">
         <section id="home">
             <h2>Welcome to My Project</h2>
             <p>This is a basic project site template. You can modify it to suit your needs.</p>
@@ -45,19 +54,4 @@
         <p>&copy; 2025 My Project Site</p>
     </footer>
 </body>
-    <div class="sidenav">
-  <a href="#about">About</a>
-  <a href="#services">Services</a>
-  <a href="#clients">Clients</a>
-  <a href="#contact">Contact</a>
-  <button class="dropdown-btn">Dropdown
-    <i class="fa fa-caret-down"></i>
-  </button>
-  <div class="dropdown-container">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-  <a href="#contact">Search</a>
-</div>
 </html>
