--- a/index.html
+++ b/index.html
@@ -3,116 +3,143 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Class Website</title>
+    <title>Music Therapy Project</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: white;
+            color: #333;
         }
-
         header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem 0;
-            text-align: center;
-        }
-
-        nav {
-            background-color: #444;
+            background-color: #a7e2ed;
+            padding: 15px;
             display: flex;
-            justify-content: center;
-            padding: 0.5rem 0;
+            align-items: center;
+            justify-content: space-between;
         }
-
+        .logo img {
+            height: 50px;
+        }
+        nav {
+            display: flex;
+            gap: 20px;
+        }
         nav a {
-            color: #fff;
-            margin: 0 1rem;
             text-decoration: none;
+            color: #333;
             font-weight: bold;
+            padding: 10px;
         }
-
         nav a:hover {
-            text-decoration: underline;
+            background-color: #d4f1f9;
+            border-radius: 5px;
         }
-
-        .container {
-            max-width: 1200px;
-            margin: 2rem auto;
-            padding: 1rem;
-            background-color: #fff;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        .search-box {
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
         }
-
-        .section {
-            margin-bottom: 2rem;
+        section {
+            padding: 50px;
+            min-height: 100vh;
         }
-
-        .section h2 {
-            margin-top: 0;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
+        .home {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
             text-align: center;
-            padding: 1rem 0;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        }
+        .product-placeholder {
+            width: 80%;
+            height: 300px;
+            background-color: #d4f1f9;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+            margin-top: 20px;
+        }
+        .about-us img {
+            width: 100px;
+            border-radius: 50%;
+            margin-right: 15px;
+        }
+        .team-member {
+            display: flex;
+            align-items: center;
+            margin-bottom: 20px;
+        }
+        .product-section {
+            text-align: center;
+        }
+        .research {
+            margin-top: 50px;
+        }
+        .fake-info {
+            margin-top: 50px;
+            background-color: #f4f4f4;
+            padding: 20px;
+            text-align: center;
+        }
+        html {
+            scroll-behavior: smooth;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Project Class Website</h1>
-    </header>
+
+<header>
+    <div class="logo">
+        <img src="logo.png" alt="Logo">  <!-- Replace this with the refined version later -->
+    </div>
     <nav>
         <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
+        <a href="#product">Product</a>
+        <a href="#about">About Us</a>
     </nav>
-    <div class="container">
-        <section id="home" class="section">
-            <h2>Welcome to the Project Class</h2>
-            <p>This is the home page of the project class website.</p>
-        </section>
-        <section id="about" class="section">
-            <h2>About Us</h2>
-            <p>This section contains information about the project class.</p>
-        </section>
-        <section id="projects" class="section">
-            <h2>Our Projects</h2>
-            <p>This section showcases the projects completed by the students.</p>
-        </section>
-        <section id="contact" class="section">
-            <h2>Contact Us</h2>
-            <p>This section contains contact information.</p>
-        </section>
-    </div>
-    <footer>
-        <p>&copy; 2025 Project Class. All rights reserved.</p>
-    </footer>
-    <script>
-        // JavaScript can be added here
-        document.addEventListener('DOMContentLoaded', function() {
-            const navLinks = document.querySelectorAll('nav a');
+    <input type="text" class="search-box" placeholder="Search...">
+</header>
 
-            navLinks.forEach(link => {
-                link.addEventListener('click', function(event) {
-                    event.preventDefault();
-                    const targetId = this.getAttribute('href').substring(1);
-                    const targetSection = document.getElementById(targetId);
-                    window.scrollTo({
-                        top: targetSection.offsetTop,
-                        behavior: 'smooth'
-                    });
-                });
-            });
-        });
-    </script>
+<section id="home" class="home">
+    <h1>Welcome to Our Music Therapy Project</h1>
+    <p>Helping healthcare workers through the power of music.</p>
+    <div class="product-placeholder">Product Showcase</div>
+    <div class="fake-info">
+        <h2>Did You Know?</h2>
+        <p>Fake information placeholder for fun facts or statistics.</p>
+    </div>
+</section>
+
+<section id="product" class="product-section">
+    <h1>Our Product</h1>
+    <p>Explore the features of our music therapy solution.</p>
+    <div class="research">
+        <h2>Research & Statistics</h2>
+        <p>Graphs and qualitative data will be inserted here.</p>
+    </div>
+</section>
+
+<section id="about" class="about-us">
+    <h1>About Us</h1>
+    <p>Our mission is to improve well-being through music therapy.</p>
+    <div class="team-member">
+        <img src="team1.jpg" alt="Team Member">
+        <p><strong>Member Name</strong> - Role</p>
+    </div>
+    <div class="team-member">
+        <img src="team2.jpg" alt="Team Member">
+        <p><strong>Member Name</strong> - Role</p>
+    </div>
+</section>
+
+<script>
+    // Smooth scrolling is already handled by CSS: html { scroll-behavior: smooth; }
+</script>
+
 </body>
 </html>
-``` ▋
