Update index.html - Test Figma Embed

--- a/index.html
+++ b/index.html
@@ -108,12 +108,19 @@
 <section id="home" class="home">
     <h1>Welcome to Our Music Therapy Project</h1>
     <p>Helping healthcare workers through the power of music.</p>
-    <div class="product-placeholder">Product Showcase</div>
+    <iframe 
+        src="https://embed.figma.com/design/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=0-1&embed-host=share" allowfullscreen 
+        width="80%" 
+        height="400px" 
+        frameborder="0" 
+        allowfullscreen>
+    </iframe>
     <div class="fake-info">
         <h2>Did You Know?</h2>
         <p>Fake information placeholder for fun facts or statistics.</p>
     </div>
 </section>
+
 
 <section id="product" class="product-section">
     <h1>Our Product</h1>
