--- a/index.html
+++ b/index.html
@@ -108,12 +108,18 @@
 <section id="home" class="home">
     <h1>Welcome to Our Music Therapy Project</h1>
     <p>Helping healthcare workers through the power of music.</p>
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://embed.figma.com/proto/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=18-834&p=f&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A424&show-proto-sidebar=1&embed-host=share" allowfullscreen></iframe>
+    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+        width="800" 
+        height="450" 
+        src="https://embed.figma.com/proto/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=18-834&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A424&show-proto-sidebar=1&embed-host=share" 
+        allowfullscreen>
+    </iframe>
     <div class="fake-info">
         <h2>Did You Know?</h2>
         <p>Fake information placeholder for fun facts or statistics.</p>
     </div>
 </section>
+
 
 
 <section id="product" class="product-section">
