--- a/index.html
+++ b/index.html
@@ -108,17 +108,41 @@
 <section id="home" class="home">
     <h1>Welcome to Our Music Therapy Project</h1>
     <p>Helping healthcare workers through the power of music.</p>
-    <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" 
-        width="800" 
-        height="450" 
-        src="https://embed.figma.com/proto/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=18-834&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A424&show-proto-sidebar=1&embed-host=share" 
+    
+    <div style="margin-bottom: 15px;">
+        <button onclick="showPrototype()" style="padding: 10px; font-size: 16px; border: none; background: #a7e2ed; cursor: pointer; border-radius: 5px;">
+            Show Interactive App
+        </button>
+        <button onclick="showFullDesign()" style="padding: 10px; font-size: 16px; border: none; background: #82cadb; cursor: pointer; border-radius: 5px;">
+            Show All Pages
+        </button>
+    </div>
+
+    <iframe id="figmaFrame" 
+        style="border: 1px solid rgba(0, 0, 0, 0.1);" 
+        width="100%" 
+        height="600" 
+        src="https://embed.figma.com/design/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=0-1&embed-host=share" 
         allowfullscreen>
     </iframe>
+
     <div class="fake-info">
         <h2>Did You Know?</h2>
         <p>Fake information placeholder for fun facts or statistics.</p>
     </div>
 </section>
+
+<script>
+function showPrototype() {
+    document.getElementById("figmaFrame").src = "https://embed.figma.com/proto/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=18-834&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=18%3A424&show-proto-sidebar=1&embed-host=share";
+}
+
+function showFullDesign() {
+    document.getElementById("figmaFrame").src = "https://embed.figma.com/design/XmqJJCuptuaIvPtpeygrc8/Untitled?node-id=0-1&embed-host=share";
+}
+</script>
+
+
 
 
 
